[package]
name = "speedtest-rs"
version = "1.0.0"
authors = ["zhy <zhy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed="5.6"
clap = "3.0.0-beta.2"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
pickledb = "0.4.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"